Fix loading dialog on narrow view

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,10 @@ h1 {
 .dialog {
     font-size: 1.5em;
     padding: 15px;
-    width: 20%;
+    width: 30%;
     border: 2px outset #aaaaaa;
     background-color: white;
     position: fixed;
     top: 40%;
-    margin: 0 40%;
+    margin: 0 35%;
 }
